--- a/src/index.css
+++ b/src/index.css
@@ -6,38 +6,12 @@ body {
 
 .container {
   text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.header {
-  height: 80px;
-  padding: 12px;
+.content {
   display: flex;
-  justify-content: space-between;
-}
-
-.logo-container, .settings-container {
-  display: flex;
-  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
-}
-
-.icon {
-  height: 64px;
-  width: 64px;
-  padding: 0 12px;
-}
-
-.icon.small {
-  height: 32px;
-  width: 32px;
-  padding: 0 12px;
-}
-
-.header h1 {
-  font-weight: 100;
-  letter-spacing: 2px;
-}
-
-.logo.white {
-  color: white;
 }
