--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
 
 .content {
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
+}
+
+.content div {
+  padding: 0 18px;
 }
