--- a/src/Entry/index.css
+++ b/src/Entry/index.css
@@ -3,6 +3,16 @@
     width: 400px;
 }
 
+.form h3 {
+    margin-top: 0;
+    font-weight: 100;
+    text-transform: uppercase;
+}
+
+.form .info {
+    font-weight: 100;
+}
+
 label {
     text-transform: uppercase;
     font-weight: 100;
