--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,49 @@ body {
 .content div {
   padding: 0 18px;
 }
+
+label {
+  text-transform: uppercase;
+  font-weight: 100;
+}
+
+textarea {
+  width: 100%;
+  min-height: 120px;
+}
+
+input, textarea {
+  font-size: 16px;
+  background: none;
+  border: 0;
+  border-bottom: 1px solid #ddd;
+  padding: 8px 4px;
+  margin-right: 8px;
+}
+
+button {
+  background: none;
+  padding: 8px 12px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 100;
+}
+
+button.green {
+  background-color: #77b300;
+  border: 1px solid #77b300;
+}
+
+button.transparent {
+  background-color: none;
+  border: none;
+}
+
+button.active {
+  border: 1px solid #ddd;
+}
+
+button.small {
+  padding: 10px 4px;
+}
