--- a/react-ui/src/components/Header/index.css
+++ b/react-ui/src/components/Header/index.css
@@ -3,6 +3,7 @@
   padding: 12px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 32px;
 }
 
@@ -10,6 +11,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  min-width: 84px;
 }
 
 .icon {
@@ -53,4 +55,30 @@ button.menu-item {
   TODO:
   1) add nice click/hover effects
   */
+}
+
+.mobile-settings-container {
+  display: none;
+}
+
+.left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media(max-width: 450px) {
+  .settings-container {
+    display: none;
+  }
+
+  .mobile-settings-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .header .title h1 {
+    font-size: 18px;
+  }
 }
