--- a/react-ui/src/components/Overlay/index.css
+++ b/react-ui/src/components/Overlay/index.css
@@ -14,15 +14,16 @@
 }
 
 .overlay .header {
-    width: 100%;
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 24px;
+    flex-direction: row;
 }
 
 .overlay .header button.close {
     background: none;
     border: none;
+    padding: 0;
+    margin: 0;
 }
 
 .overlay .header .icon {
@@ -30,3 +31,15 @@
     width: 32px;
     padding: 0 12px;
 }
+
+.overlay .content {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+@media(max-width: 500px) {
+    .overlay {
+        padding: 12px;
+    }
+  }
