--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -74,3 +74,9 @@ span.numeric-span {
   background-color: #ddd;
   font-family: "monospace"
 }
+
+@media(max-width: 768px) {
+  .content {
+    flex-direction: column-reverse;
+  }
+}
