--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -1,3 +1,11 @@
+/* html {
+  background: url(media/bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
+
 body {
   margin: 0;
   padding: 0;
@@ -8,6 +16,19 @@ body {
   text-align: center;
   max-width: 1200px;
   margin: 0 auto;
+  padding-bottom: 24px;
+  /* background: white; */
+}
+
+.container .attribution {
+  text-align: center;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #a5a5a5
+}
+
+.container .attribution a {
+  text-decoration: none;
 }
 
 .content {
