--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -1,20 +1,25 @@
-/* html {
-  background: url(media/bg.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-} */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,700');
 
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Roboto;
+  font-weight: 300;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Open Sans";
+  font-weight: 300;
 }
 
 .container {
   text-align: center;
-  max-width: 1200px;
+  max-width: 900px;
   margin: 0 auto;
 }
 
