--- a/react-ui/src/components/Overlay/index.css
+++ b/react-ui/src/components/Overlay/index.css
@@ -4,14 +4,17 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 64px;
   background: white;
+  display: flex;
+  flex-flow: column;
 }
 
 .overlay .header {
   display: flex;
   justify-content: flex-end;
   flex-direction: row;
+  padding-right: 20px;
+  max-height: 104px;
 }
 
 .overlay .header button.close {
@@ -30,11 +33,8 @@
 .overlay .content {
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-}
-
-@media (max-width: 768px) {
-  .overlay {
-    padding: 12px;
-  }
+  justify-content: space-around;
+  flex: 1;
+  overflow: auto;
+  padding-bottom: 48px;
 }
