--- a/react-ui/src/components/Header/index.css
+++ b/react-ui/src/components/Header/index.css
@@ -6,17 +6,17 @@
   align-items: center;
 }
 
-.logo-container, .settings-container {
+.logo-container,
+.settings-container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  min-width: 88px;
 }
 
 .icon {
   height: 64px;
   width: 64px;
-  padding: 0 12px;
+  padding-right: 12px;
 }
 
 .icon.small {
@@ -66,7 +66,7 @@ button.menu-item {
   justify-content: center;
 }
 
-@media(max-width: 768px) {
+@media (max-width: 768px) {
   .settings-container {
     display: none;
   }
