--- a/react-ui/src/components/Overlay/index.css
+++ b/react-ui/src/components/Overlay/index.css
@@ -17,7 +17,7 @@
   max-height: 104px;
 }
 
-.overlay .header button.close {
+.overlay .header button.icon-button {
   background: none;
   border: none;
   padding: 0;
@@ -37,4 +37,5 @@
   flex: 1;
   overflow: auto;
   padding-bottom: 48px;
+  width: 100%;
 }
