--- a/react-ui/src/components/Header/index.scss
+++ b/react-ui/src/components/Header/index.scss
@@ -3,41 +3,49 @@
   padding: 12px;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+}
 
 .logo-container,
 .settings-container {
   display: flex;
   flex-direction: row;
-  align-items: center; }
+  align-items: center;
+}
 
 .icon {
   height: 64px;
   width: 64px;
-  padding-right: 12px; }
+  padding-right: 12px;
+}
 
 .icon.small {
   height: 32px;
   width: 32px;
-  padding: 0 12px; }
+  padding: 0 12px;
+}
 
 .icon.extra-small {
   height: 16px;
   width: 16px;
-  padding: 0 8px; }
+  padding: 0 8px;
+}
 
 .header .title {
-  text-align: left; }
+  text-align: left;
+}
 
 .header .title h1,
 .header .title h2 {
   font-weight: 100;
   letter-spacing: 2px;
   margin: 0;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 .header .title h2 {
-  font-size: 12px; }
+  font-size: 12px;
+}
 
 button.menu-item {
   border: 0;
@@ -45,22 +53,31 @@ button.menu-item {
   /*
   TODO:
   1) add nice click/hover effects
-  */ }
+  */
+}
 
 .mobile-settings-container {
-  display: none; }
+  display: none;
+}
 
 .left {
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+}
 
 @media (max-width: 768px) {
   .settings-container {
-    display: none; }
+    display: none;
+  }
+
   .mobile-settings-container {
     display: flex;
     align-items: center;
-    justify-content: center; }
+    justify-content: center;
+  }
+
   .header .title h1 {
-    font-size: 18px; } }
+    font-size: 18px;
+  }
+}
