--- a/react-ui/src/components/Entry/index.scss
+++ b/react-ui/src/components/Entry/index.scss
@@ -51,6 +51,11 @@
 
   .body {
     padding-top: 8px !important;
+    background: $grey-super-light;
+
+    .input-container {
+      margin: 24px 0;
+    }
   }
 
   .info {
