--- a/react-ui/src/index.scss
+++ b/react-ui/src/index.scss
@@ -73,8 +73,8 @@ textarea {
   font-size: 16px;
   background: none;
   border: 0;
-  border-bottom: 1px solid #a5a5a5;
-  padding: 8px 4px;
+  border: 1px solid $grey-light;
+  padding: 8px;
   margin-right: 8px;
 }
 
