--- a/react-ui/src/styles/variables.scss
+++ b/react-ui/src/styles/variables.scss
@@ -4,4 +4,6 @@ $go-green: #2db928;
   @return rgba(45, 185, 40, $percentage);
 }
 
-$grey: #a5a5a5;
+$grey: #a3a3a3;
+$grey-light: #d4d4d4;
+$grey-super-light: #fafafa;
