--- a/react-ui/src/components/views/Entry/index.scss
+++ b/react-ui/src/components/views/Entry/index.scss
@@ -12,6 +12,7 @@
   color: white;
   padding: 0 !important;
   width: 100%;
+  box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
 
   &.entry-shown {
     .body {
@@ -25,7 +26,7 @@
     align-items: center;
     min-height: 40px;
     background-color: $go-green;
-    padding: 24px !important;
+    padding: 16px 24px !important;
 
     h3 {
       font-weight: 100;
@@ -46,8 +47,8 @@
   }
 
   .body {
-    background: $grey-super-light;
-    padding: 12px 24px !important;
+    background: white;
+    padding: 12px 24px 32px 24px !important;
 
     .input-container {
       margin: 24px 0;
