--- a/react-ui/src/components/views/Header/index.scss
+++ b/react-ui/src/components/views/Header/index.scss
@@ -1,83 +1,86 @@
 .header {
-  height: 80px;
-  padding: 12px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+  padding: 48px 0;
+  background: url("./stars.jpg");
+  color: white;
 
-.logo-container,
-.settings-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px;
+  }
 
-.icon {
-  height: 64px;
-  width: 64px;
-  padding-right: 12px;
-}
+  .title {
+    text-align: left;
+  }
 
-.icon.small {
-  height: 32px;
-  width: 32px;
-  padding: 0 12px;
-}
+  .logo-container,
+  .menu-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 
-.icon.extra-small {
-  height: 16px;
-  width: 16px;
-  padding: 0 8px;
-}
+  h1,
+  h2 {
+    font-weight: 100;
+    letter-spacing: 2px;
+    margin: 0;
+    text-transform: uppercase;
+  }
 
-.header .title {
-  text-align: left;
-}
+  h2 {
+    font-size: 12px;
+  }
 
-.header .title h1,
-.header .title h2 {
-  font-weight: 100;
-  letter-spacing: 2px;
-  margin: 0;
-  text-transform: uppercase;
-}
+  .icon {
+    height: 64px;
+    width: 64px;
+    padding-right: 12px;
+  }
 
-.header .title h2 {
-  font-size: 12px;
-}
+  .icon.small {
+    height: 32px;
+    width: 32px;
+    padding: 0 12px;
+  }
 
-button.menu-item {
-  border: 0;
-  background: none;
-  /*
-  TODO:
-  1) add nice click/hover effects
-  */
-}
+  .icon.extra-small {
+    height: 16px;
+    width: 16px;
+    padding: 0 8px;
+  }
 
-.mobile-settings-container {
-  display: none;
-}
+  button.menu-item {
+    border: 0;
+    background: none;
+  }
 
-.left {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-@media (max-width: 768px) {
-  .settings-container {
+  .mobile-menu-container {
     display: none;
   }
 
-  .mobile-settings-container {
+  .left {
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
-  .header .title h1 {
-    font-size: 18px;
+  @media (max-width: 768px) {
+    .menu-container {
+      display: none;
+    }
+
+    .mobile-menu-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .title {
+      h1 {
+        font-size: 18px;
+      }
+    }
   }
 }
