--- a/react-ui/src/styles/variables.scss
+++ b/react-ui/src/styles/variables.scss
@@ -1,4 +1,4 @@
-$go-green: #2db928;
+$go-green: #49c588;
 
 @function go-green-transparent($percentage) {
   @return rgba(45, 185, 40, $percentage);
@@ -6,4 +6,4 @@ $go-green: #2db928;
 
 $grey: #a3a3a3;
 $grey-light: #d4d4d4;
-$grey-super-light: #fafafa;
+$grey-super-light: #f5f5f5;
