final style fixes

--- a/react-ui/src/components/views/AddEntry/index.scss
+++ b/react-ui/src/components/views/AddEntry/index.scss
@@ -54,6 +54,10 @@
       margin: 24px 0;
       padding: 0 !important;
     }
+
+    .button-container {
+      padding: 0 !important;
+    }
   }
 
   .info {
