--- a/react-ui/src/index.scss
+++ b/react-ui/src/index.scss
@@ -51,7 +51,7 @@ h6 {
 
 .content {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
   margin: 32px auto 64px auto;
@@ -113,5 +113,5 @@ button.small {
 .line-break {
   height: 2px;
   width: 100px;
-  background: black;
+  background: $grey-light;
 }
