--- a/react-ui/src/components/elements/Header/index.scss
+++ b/react-ui/src/components/elements/Header/index.scss
@@ -1,6 +1,6 @@
 .header {
   padding: 48px 0;
-  background: url("./stars.jpg");
+  background: url("../../../media/stars.jpg");
   color: white;
 
   .container {
