--- a/react-ui/src/index.scss
+++ b/react-ui/src/index.scss
@@ -96,6 +96,11 @@ button.green {
   border: 1px solid $go-green;
 }
 
+button.blue {
+  background-color: $more-blue;
+  border: 1px solid $more-blue;
+}
+
 button.transparent {
   background-color: none;
   border: none;
