--- a/react-ui/src/components/views/portal.scss
+++ b/react-ui/src/components/views/portal.scss
@@ -11,8 +11,13 @@
     background: rgba(255, 255, 255, 0.95);
     padding: 48px;
 
-    .introduction {
+    .introduction,
+    .error-message {
       max-width: 300px;
+      margin: 0 auto;
+    }
+
+    .introduction {
       text-align: center;
       margin-bottom: 24px;
 
@@ -23,6 +28,12 @@
       .description {
         font-size: 90%;
       }
+    }
+
+    .error-message {
+      color: red;
+      text-align: center;
+      margin-bottom: 24px;
     }
 
     .form-group {
